	* test/unittest/types/err.unloaded_var.d: Verify that using
	variables in unloaded kernel modules does not work.

	* runtest.sh: Add @@hide for modules whose removal should not
	be commented on.  Log skips.
	* test/modules: Add ext3, hidden.
	* test/unittest/misc/tst.include.sh: Skip it.

	* libdtrace/Build: Use Bison as the parser generator.

	* libdtrace/dt_pcb.h (pcb_xlator_input): New.
	* libdtrace/dt_grammar.y (translator_input_type): New, type_name with
	pcb_xlator_input flipped on beforehand.
	(translator_close_paren): Flip pcb_xlator_input off again.
	(translator_definition): Use them.
	* libdtrace/dt_lex.l (id_or_type): In a program clause with
	pcb_xlator_input turned on, an id_or_type followed by > is an
	identifier.

2012-09-07  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec: RPM macros use %, not $.

2012-09-05  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pragma.c (dt_pragma_line): Support GCC-style
	#line directives.

	* uts/common/sys/dtrace.h: No longer include <sys/ctf_api.h>...
	* libdtrace/dtrace.h: ... do it here instead.
	* dtrace-utils.spec: Split out a -devel package containing
	libdtrace/dtrace.h that depends on libdtrace-ctf-devel.
	* libdtrace-ctf: Pull in the <sys/ctf_types.h> move.

	* uts/common/sys/dtrace_ioctl.h: No longer include
	<linux/types.h>.

	* test/unittest/aggs/tst.subr.d: Enable this test, commenting out
	unimplemented subrs and compensating accordingly.
	* test/unittest/dtrace-util/tst.InvalidId2.sh: Note that the
	behaviour this tests for is simply not implemented yet.
	* test/unittest/regression/exit_panic.d: Fix copyright date.

	* runtest.sh: Fix non-installed include path.
	* uts/Build: Install sys/dtrace_ioctl.h.
	* dtrace-utils.spec: Add it to %files.

2012-09-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace-ctf: Pull in the libdtrace-ctf-devel package split.
	* dtrace-utils.spec: Adapt to libdtrace-ctf-devel package split.
	Next version is 0.3.  Use macros for most file locations.